
public class Zona {
   public String nombre;
   public int extension;

   public Zona(String nombre, int extension){
    this.nombre = nombre;
    this.extension = extension;
 }
 public String getNombre(){
    return this.nombre;
 }
 public void setNombre(String nombre){
    this.nombre = nombre;
 }
 public int getExtension(){
    return this.extension;
 }
 public void setExtension(int extension){
    this.extension =extension;
 }
}
